--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "ssh-manager"
 version = "0.1.0"
 description = "SSH key management utility"
-authors = [{name = "Your Name", email = "your.email@example.com"}]
+authors = [{name = "Aaron Newman", email = "aaronlnewman@gmail.com"}]
 license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.8"
